@@ -210,7 +210,10 @@ void caml_final_empty_young (void)
 /* Put (f,v) in the recent set. */
 CAMLprim value caml_final_register (value f, value v)
 {
-  if (!(Is_block (v) && Is_in_heap_or_young(v))) {
+  if (!Is_block (v)
+        || !Is_in_heap_or_young(v)
+        || Tag_val (v) == Lazy_tag
+        || Tag_val (v) == Double_tag) {
     caml_invalid_argument ("Gc.finalise");
   }
   Assert (old <= young);
