@@ -83,6 +83,8 @@ Bug fixes:
 - PR#6648: show_module should indicate its elision
 - PR#6650: Cty_constr not handled correctly by Subst
 - PR#6651: Failing component lookup
+* PR#6664: Crash when finalising lazy values of the wrong type.
+  (Damien Doligez)
 - PR#6744: Univars can escape through polymorphic variants (partial fix)
 - PR#6752: Extensible variant types and scope escaping
 
